--- a/src/app/configuration/configuration.component.scss
+++ b/src/app/configuration/configuration.component.scss
@@ -947,7 +947,7 @@ tr:nth-child(even) {
 
 h2 {
   font-family: "graphik", Arial,  sans-serif;
-  font-size: 36px;
+  font-size: 17px;
   font-weight: bold;
   color: #da2127;
 }
